# HorseClubProject

./: .gitmodules  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_09_21_1424-20c057157950_create_database.py
appForms/: app_horse.py  app_orders.py  app_users.py
auth/: jwt_auth.py  utils.py
core/: config.py
core/models/: __init__.py  db_helper.py  horse.py  order.py  user.py
routers/: __init__.py
routers/horses/: crud.py  dependencies.py  schemas.py  views.py
routers/orders/: crud.py  dependencies.py  schemas.py  views.py
routers/users/: crud.py  dependencies.py  schemas.py  views.py
